[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Calculator.gd" type="Script" id=1]

[node name="Calculator" type="Node2D" groups=[
"Tools",
]]
z_index = 100
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0.352941, 0, 0, 1 )
margin_right = 200.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
margin_left = 5.0
margin_top = 25.0
margin_right = 195.0
margin_bottom = 65.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 103.0
margin_bottom = 22.0
rect_scale = Vector2( 1.8, 1.8 )
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nums" type="Node2D" parent="."]

[node name="Button0" type="Button" parent="Nums"]
margin_left = 15.0
margin_top = 255.0
margin_right = 35.0
margin_bottom = 275.0
rect_scale = Vector2( 1.5, 1.5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button11" type="Button" parent="Nums"]
margin_left = 50.0
margin_top = 255.0
margin_right = 70.0
margin_bottom = 275.0
rect_scale = Vector2( 1.5, 1.5 )
text = "."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button12" type="Button" parent="Nums"]
margin_left = 84.2509
margin_top = 255.0
margin_right = 104.251
margin_bottom = 275.0
rect_scale = Vector2( 1.5, 1.5 )
text = "="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="Button" parent="Nums"]
margin_left = 15.0
margin_top = 220.0
margin_right = 35.0
margin_bottom = 240.0
rect_scale = Vector2( 1.5, 1.5 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Nums"]
margin_left = 50.0
margin_top = 220.0
margin_right = 70.0
margin_bottom = 240.0
rect_scale = Vector2( 1.5, 1.5 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Nums"]
margin_left = 85.0
margin_top = 220.0
margin_right = 105.0
margin_bottom = 240.0
rect_scale = Vector2( 1.5, 1.5 )
text = "3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Nums"]
margin_left = 15.0
margin_top = 185.0
margin_right = 35.0
margin_bottom = 205.0
rect_scale = Vector2( 1.5, 1.5 )
text = "4"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="Nums"]
margin_left = 50.0
margin_top = 185.0
margin_right = 70.0
margin_bottom = 205.0
rect_scale = Vector2( 1.5, 1.5 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="Nums"]
margin_left = 85.0
margin_top = 185.0
margin_right = 105.0
margin_bottom = 205.0
rect_scale = Vector2( 1.5, 1.5 )
text = "6"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="Nums"]
margin_left = 15.0
margin_top = 150.0
margin_right = 35.0
margin_bottom = 170.0
rect_scale = Vector2( 1.5, 1.5 )
text = "7"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="Nums"]
margin_left = 50.0
margin_top = 150.0
margin_right = 70.0
margin_bottom = 170.0
rect_scale = Vector2( 1.5, 1.5 )
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="Nums"]
margin_left = 85.0
margin_top = 150.0
margin_right = 105.0
margin_bottom = 170.0
rect_scale = Vector2( 1.5, 1.5 )
text = "9"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button13" type="Button" parent="Nums"]
margin_left = 120.0
margin_top = 150.0
margin_right = 160.0
margin_bottom = 170.0
rect_scale = Vector2( 1.5, 1.5 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button14" type="Button" parent="Nums"]
margin_left = 120.0
margin_top = 185.0
margin_right = 160.0
margin_bottom = 205.0
rect_scale = Vector2( 1.5, 1.5 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button15" type="Button" parent="Nums"]
margin_left = 120.0
margin_top = 220.0
margin_right = 160.0
margin_bottom = 240.0
rect_scale = Vector2( 1.5, 1.5 )
text = "/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button16" type="Button" parent="Nums"]
margin_left = 120.0
margin_top = 255.0
margin_right = 160.0
margin_bottom = 275.0
rect_scale = Vector2( 1.5, 1.5 )
text = "*"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button19" type="Button" parent="Nums"]
margin_left = 16.0
margin_top = 125.0
margin_right = 181.0
margin_bottom = 145.0
text = "CLEAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColouredBack" type="ColorRect" parent="."]
margin_right = 200.0
margin_bottom = 20.0
color = Color( 0.313726, 0.313726, 0.313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button17" type="Button" parent="."]
margin_left = 180.0
margin_right = 200.0
margin_bottom = 20.0
text = "x"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="expand" type="Button" parent="."]
margin_left = 160.0
margin_right = 180.0
margin_bottom = 20.0
text = "_"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button18" type="Button" parent="."]
margin_right = 160.0
margin_bottom = 20.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 5.0
margin_top = 3.0
margin_right = 68.0
margin_bottom = 17.0
text = "Calculator"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Nums/Button0" to="." method="_on_Button0_pressed"]
[connection signal="pressed" from="Nums/Button11" to="." method="_on_Button11_pressed"]
[connection signal="pressed" from="Nums/Button12" to="." method="_on_Button12_pressed"]
[connection signal="pressed" from="Nums/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Nums/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Nums/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Nums/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Nums/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Nums/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Nums/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Nums/Button8" to="." method="_on_Button8_pressed"]
[connection signal="pressed" from="Nums/Button9" to="." method="_on_Button9_pressed"]
[connection signal="pressed" from="Nums/Button13" to="." method="_on_Button13_pressed"]
[connection signal="pressed" from="Nums/Button14" to="." method="_on_Button14_pressed"]
[connection signal="pressed" from="Nums/Button15" to="." method="_on_Button15_pressed"]
[connection signal="pressed" from="Nums/Button16" to="." method="_on_Button16_pressed"]
[connection signal="pressed" from="Nums/Button19" to="." method="_on_Button19_pressed"]
[connection signal="pressed" from="Button17" to="." method="_on_Button17_pressed"]
[connection signal="pressed" from="expand" to="." method="_on_expand_pressed"]
[connection signal="button_down" from="Button18" to="." method="_on_Button18_button_down"]
[connection signal="button_up" from="Button18" to="." method="_on_Button18_button_up"]
